--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@ content %}
 <div class="info">
   <span class="highScores">
     <h3>Top Scores</h3>
-    {% if session['high_scores'].__len__ > 0 %}
+    {% if session['high_scores'] | length > 0 %}
     <ol>
       {% for score in session['high_scores'] %}
       <li>{{score}}</li>
